azure-pipelines/k8s/output/dev/av-mottak/templates/kicker-deployment.yaml
---
# Source: av-mottak/templates/kicker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: av-mottak-dev-kicker-deployment
  namespace: av-mottak-dev
  labels:
    app: kicker-app
spec:
  replicas: 1
  selector:
    matchLabels:
      run: kicker-app
  template:
    metadata:
      labels:
        run: kicker-app
    spec:
      containers:
        - image: 'arkivverket.azurecr.io/av-mottak/kicker:a3554de11a330acc63d70b13a6b3cb62ca8bb43d'
          imagePullPolicy: Always
          name: kicker-container
