azure-pipelines/k8s/output/dev/av-mottak/templates/mount_the_secrets.yaml
---
# Source: av-mottak/templates/mount_the_secrets.yaml
kind: Pod
apiVersion: v1
metadata:
  name: av-mottak-dev-csi-attachment-mount-secrets
  namespace: av-mottak-dev
  labels:
    aadpodidbinding: "av-mottak-dev-id-keyvault"
spec:
  containers:
  - image: nginx
    name: nginx
    volumeMounts:
    - name: secrets-store-inline
      mountPath: "/mnt/secrets-store"
      readOnly: true
  volumes:
    - name: secrets-store-inline
      csi:
        driver: secrets-store.csi.k8s.io
        readOnly: true
        volumeAttributes:
          secretProviderClass: "av-mottak-dev-csidriver-keyvault"
