azure-pipelines/k8s/output/dev/av-mottak/templates/tusd-deployment.yaml
---
# Source: av-mottak/templates/tusd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: av-mottak-dev-tusd-deployment
  namespace: av-mottak-dev
  labels:
    app: tusd-app
spec:
  replicas: 1
  selector:
    matchLabels:
      run: tusd-app
  template:
    metadata:
      labels:
        run: tusd-app
    spec:
      containers:
        - image: 'arkivverket.azurecr.io/av-mottak/tusd:c8a951e417c427e7ada6431332e3a9272619948a'
          imagePullPolicy: Always
          name: tusd-container
          ports:
            - containerPort: 1080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 1080
            initialDelaySeconds: 10
            periodSeconds: 10
