azure-pipelines/k8s/output/dev/av-mottak/templates/mottak-arkiv-service-deployment.yaml
---
# Source: av-mottak/templates/mottak-arkiv-service-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: av-mottak-dev-mottak-arkiv-service-service
  namespace: av-mottak-dev
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    run:  mottak-arkiv-service-app    # references the deployment
---
# Source: av-mottak/templates/mottak-arkiv-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: av-mottak-dev-mottak-arkiv-service-deployment
  namespace: av-mottak-dev
  labels:
    app: mottak-arkiv-service-app
spec:
  replicas: 1
  selector:
    matchLabels:
      run: mottak-arkiv-service-app
  template:
    metadata:
      labels:
        run: mottak-arkiv-service-app
    spec:
      containers:
        - image: 'arkivverket.azurecr.io/av-mottak/mottak-arkiv-service:f2f1137cdc8cb71d067171451019c5a67792d472'
          imagePullPolicy: Always
          name: mottak-arkiv-service-container
          ports:
            - containerPort: 80
              protocol: TCP
