azure-pipelines/k8s/output/dev/av-mottak/templates/nginx.yaml
---
# Source: av-mottak/templates/nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: av-mottak-dev-nginx-service
  namespace: av-mottak-dev
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    run: nginx
---
# Source: av-mottak/templates/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: av-mottak-dev-nginx-deployment
  namespace: av-mottak-dev
  labels:
    run: nginx
spec:
  selector:
    matchLabels:
      run: nginx
  replicas: 1 # tells deployment to run 1 pods matching the template
  template:
    metadata:
      labels:
        run: nginx
    spec:
      containers:
        - image: nginx
          imagePullPolicy: IfNotPresent
          name: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /etc/nginx/conf.d # mount nginx-conf volume to /etc/nginx/conf.d
              readOnly: true
              name: default-conf
      volumes:
        - name: default-conf
          configMap:
            name: nginx-config
            items:
              - key: default.conf
                path: default.conf
