azure-pipelines/k8s/output/dev/av-mottak/templates/oauth2-proxy.yaml
---
# Source: av-mottak/templates/oauth2-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name:  av-mottak-dev-oauth2-proxy-service
  namespace: av-mottak-dev
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 4180
      targetPort: 4180
  selector:
    run: oauth2-proxy
---
# Source: av-mottak/templates/oauth2-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: av-mottak-dev-oauth2-proxy-deployment
  namespace: av-mottak-dev
  labels:
    app: oauth2-proxy-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      run: oauth2-proxy
  template:
    metadata:
      labels:
        run: oauth2-proxy
    spec:
      containers:
        - image: quay.io/oauth2-proxy/oauth2-proxy:latest
          imagePullPolicy: IfNotPresent
          name: nginx
          ports:
            - containerPort: 4180
          args:
            - "--provider=azure"
            - "--email-domain=arkivverket.no"
            - "--http-address=0.0.0.0:4180"
            - "--redirect-url=https://mottak.plattform.arkivverket.dev/oauth2/callback"
